# sea_orm_demo

./: .env.example  .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/abi/: erc721_abi.json
core/: Cargo.toml
docker/: docker-compose.yml
entity/: Cargo.toml
src/: actions.rs  main.rs  models.rs  schema.rs
