[package]
name = "meta_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web.workspace = true
actix-web = {version="4.3.1"}
diesel = { version = "2", features = ["mysql", "r2d2"] }
dotenv = "0.15"
# env_logger.workspace = true
# log.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
